--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="body_about">
+	<button style="background-color: white; "><a href="index.html">go back</a></button>
+
+
 	<div class="about_heading"><h1><strong><center>About COVID-19
 	</center></strong></h1>
 	</div>
